# vt-compiler

./: CMakeLists.txt  README.md  Vt.g4  example.vt  main.cpp  test.vt
backend/: address_alloc.cpp  address_alloc.h  asm_generation.cpp  asm_generation.h  register_allocator.cpp  register_allocator.h  string_processing.cpp  string_processing.h
backend/utils/: backend_utils.cpp  backend_utils.h
examples/concat/: concat.asm  concat.vt  concat_ast  concat_ir1  concat_ir2
examples/factorial/: factorial.asm  factorial.vt  factorial_ast  factorial_ir1  factorial_ir2
examples/fib/: fib.asm  fib.vt  fib_ast  fib_ir1  fib_ir2
examples/helloworld/: helloworld.asm  helloworld.vt  helloworld_ast  helloworld_ir1  helloworld_ir2
frontend/: Vt.interp  Vt.tokens  VtBaseListener.cpp  VtBaseListener.h  VtBaseVisitor.cpp  VtBaseVisitor.h  VtLexer.cpp  VtLexer.h  VtLexer.interp  VtLexer.tokens  VtListener.cpp  VtListener.h  VtParser.cpp  VtParser.h  VtVisitor.cpp  VtVisitor.h  ast.cpp  ast.h  ast_builder.cpp  ast_builder.h  semantic.cpp  semantic.h  symbol_table.h
frontend/tests/: CMakeLists.txt  test_ast_builder.cpp  test_semantic.cpp
frontend/utils/: ast_utils.cpp  ast_utils.h
middle/: ir.cpp  ir.h  ir_generator.cpp  ir_generator.h  string_processing.cpp  string_processing.h
middle/tests/: CMakeLists.txt  test_ir_generator.cpp
middle/utils/: ir_utils.cpp  ir_utils.h
tests/: CMakeLists.txt  test_ast_builder.cpp  test_semantic.cpp
